# GitlabIssueFetcher

./: .gitignore  LICENSE  README.md  pyproject.toml
src/gitlab_issue_fetcher/app/: display.py  gitlab.py  main.py
